tests/errors/string_replace_empty_from_panics.ptt
use std/string

spark {
  yell("abc".replace("", "x"))
}
